# grid-demand-forecast

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: backfill.py  build_features.py  ci_bootstrap_model.py  export_model.py  ingest.py  monitor.py  train.py
src/griddemand/: config.py  http.py
src/griddemand/features/: build.py
src/griddemand/ingest/: neso.py  store.py  weather.py
src/griddemand/models/: baseline.py  registry.py  train.py
src/griddemand/monitoring/: drift.py
src/griddemand/serving/: app.py  schemas.py
tests/: test_api.py  test_backfill.py  test_drift.py  test_features.py  test_http.py  test_ingest.py  test_registry_export.py  test_train.py
