[project]
name = "griddemand"
version = "0.1.0"
description = "UK national grid demand forecasting with a full MLOps loop"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.26",
    "lightgbm>=4.0",
    "mlflow>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]